# libraryMCP

./: .gitignore  CLAUDE.md  LICENSE  LibraryMCP.postman_collection.json  ProjectPlan.md  README.md  TEST_COVERAGE.md  library_mcp_project_plan.docx  main.py  openapi.json  pyproject.toml  test_main.http
.github/workflows/: ci.yml
backend/: auth.py  crud.py  database.py  main.py  models.py  schemas.py  seed.py
backend/routers/: auth.py  books.py  loans.py  members.py
frontend/: index.html
mcp/: main_stdio.py  server.py
mcp_server/: main_stdio.py  server.py
tests/: conftest.py  test_mcp_tools.py  test_schemas.py
